--- a/dataset/KnowEdit-ms/test-answer.ipynb
+++ b/dataset/KnowEdit-ms/test-answer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "\n",
     "model_name = 'Meta-Llama-3-8B-Instruct'\n",
     "# model_name = 'gpt-j-6b'\n",
-    "with open(f'answer-counterfact-{model_name}-n+1-words.json', 'r') as f:\n",
+    "with open(f'answer-counterfact-{model_name}-<=n+1-words.json', 'r') as f:\n",
     "    answer_list = f.readlines()\n",
     "\n",
     "answer_compare_dict = {\n",
@@ -43,14 +43,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>ground_truth</th>\n",
+       "      <th>answer1</th>\n",
+       "      <th>answer2</th>\n",
+       "      <th>answer3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>The place of birth of Charli D'Amelio is</td>\n",
+       "      <td>Norwalk</td>\n",
+       "      <td>Norwalk</td>\n",
+       "      <td>Hershey</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>The name of the award H.E.R. won is</td>\n",
+       "      <td>Asia's Most Influential Philippines</td>\n",
+       "      <td>the Grammy Award for Best</td>\n",
+       "      <td>Grammy Award for Best R</td>\n",
+       "      <td>MTV Video Music Award.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>The name of the country which Hurricane Ida is...</td>\n",
+       "      <td>Jamaica</td>\n",
+       "      <td>the United</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Haiti\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>The gender of Abdul Rashid Dostum is</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male.\\n</td>\n",
+       "      <td>Male\\n\\n</td>\n",
+       "      <td>Male\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>The official language of Ukraine is</td>\n",
+       "      <td>Ukrainian</td>\n",
+       "      <td>Ukrainian,</td>\n",
+       "      <td>Ukrainian\\n\\n</td>\n",
+       "      <td>Ukrainian\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>The name of the child of Isildur is</td>\n",
+       "      <td>Elendur</td>\n",
+       "      <td>not mentioned</td>\n",
+       "      <td>Elend</td>\n",
+       "      <td>Elend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>The gender of Luke Kuechly is</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male.\\n</td>\n",
+       "      <td>Male\\n</td>\n",
+       "      <td>Male\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>The name of the award Lionel Messi won is</td>\n",
+       "      <td>Best International Athlete ESPY Award</td>\n",
+       "      <td>the Ballon d'Or</td>\n",
+       "      <td>Ballon d'Or\\n</td>\n",
+       "      <td>Ballon d'Or\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>The name of the sports team which Pravin Tambe...</td>\n",
+       "      <td>Sunrisers Hyderabad</td>\n",
+       "      <td>Mumbai Indians.</td>\n",
+       "      <td>Mumbai Indians\\n</td>\n",
+       "      <td>Mumbai Indians\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>The name of the country of citizenship of LeBr...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>the United States. He</td>\n",
+       "      <td>United States of America.</td>\n",
+       "      <td>United States of America.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>The name of the country of citizenship of John...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>United States.\\nThe name</td>\n",
+       "      <td>United States of America.</td>\n",
+       "      <td>United States of America.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>The name of the mother of Ted Kaczynski is</td>\n",
+       "      <td>Wanda Dombek</td>\n",
+       "      <td>Wanda K</td>\n",
+       "      <td>Wanda K</td>\n",
+       "      <td>Wanda K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>The name of the country which Kobe Bryant sexu...</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>not mentioned in the article</td>\n",
+       "      <td>FEDERAL REPUBLIC</td>\n",
+       "      <td>Colorado\\nQuestion:Which</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>The name of the employer of Sundar Pichai is</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Google.\\n</td>\n",
+       "      <td>Alphabet\\n\\n</td>\n",
+       "      <td>Alphabet\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>The name of the award Emmett Till won is</td>\n",
+       "      <td>Congressional Gold Medal</td>\n",
+       "      <td>the \"Emmet</td>\n",
+       "      <td>Emmett Till did</td>\n",
+       "      <td>None\\nExplanation:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>The name of the award Robert Downey Jr. won is</td>\n",
+       "      <td>Golden Globe Award</td>\n",
+       "      <td>the MTV Movie Award</td>\n",
+       "      <td>Academy Award for Best</td>\n",
+       "      <td>MTV Movie Award\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>The name of the sports team which Kimi Räikkön...</td>\n",
+       "      <td>Scuderia Ferrari</td>\n",
+       "      <td>Ferrari. He</td>\n",
+       "      <td>Ferrari F1</td>\n",
+       "      <td>Lotus F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>The name of the composer of The Swimmers is</td>\n",
+       "      <td>Steven Price</td>\n",
+       "      <td>not known.</td>\n",
+       "      <td>Unknown composer\\n</td>\n",
+       "      <td>Unknown\\nQuestion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>The place of birth of Tyson Fury is</td>\n",
+       "      <td>Manchester</td>\n",
+       "      <td>Wyth</td>\n",
+       "      <td>Wyth</td>\n",
+       "      <td>Wyth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>The place of birth of Darren Barnet is</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>London, England</td>\n",
+       "      <td>Los Angeles,</td>\n",
+       "      <td>Los Angeles,</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               prompt  \\\n",
+       "40           The place of birth of Charli D'Amelio is   \n",
+       "41                The name of the award H.E.R. won is   \n",
+       "42  The name of the country which Hurricane Ida is...   \n",
+       "43               The gender of Abdul Rashid Dostum is   \n",
+       "44                The official language of Ukraine is   \n",
+       "45                The name of the child of Isildur is   \n",
+       "46                      The gender of Luke Kuechly is   \n",
+       "47          The name of the award Lionel Messi won is   \n",
+       "48  The name of the sports team which Pravin Tambe...   \n",
+       "49  The name of the country of citizenship of LeBr...   \n",
+       "50  The name of the country of citizenship of John...   \n",
+       "51         The name of the mother of Ted Kaczynski is   \n",
+       "52  The name of the country which Kobe Bryant sexu...   \n",
+       "53       The name of the employer of Sundar Pichai is   \n",
+       "54           The name of the award Emmett Till won is   \n",
+       "55     The name of the award Robert Downey Jr. won is   \n",
+       "56  The name of the sports team which Kimi Räikkön...   \n",
+       "57        The name of the composer of The Swimmers is   \n",
+       "58                The place of birth of Tyson Fury is   \n",
+       "59             The place of birth of Darren Barnet is   \n",
+       "\n",
+       "                             ground_truth                        answer1  \\\n",
+       "40                                Norwalk                        Norwalk   \n",
+       "41    Asia's Most Influential Philippines      the Grammy Award for Best   \n",
+       "42                                Jamaica                     the United   \n",
+       "43                                   male                        male.\\n   \n",
+       "44                              Ukrainian                     Ukrainian,   \n",
+       "45                                Elendur                  not mentioned   \n",
+       "46                                   male                        male.\\n   \n",
+       "47  Best International Athlete ESPY Award                the Ballon d'Or   \n",
+       "48                    Sunrisers Hyderabad                Mumbai Indians.   \n",
+       "49               United States of America          the United States. He   \n",
+       "50               United States of America       United States.\\nThe name   \n",
+       "51                           Wanda Dombek                        Wanda K   \n",
+       "52               United States of America   not mentioned in the article   \n",
+       "53                                 Google                      Google.\\n   \n",
+       "54               Congressional Gold Medal                     the \"Emmet   \n",
+       "55                     Golden Globe Award            the MTV Movie Award   \n",
+       "56                       Scuderia Ferrari                    Ferrari. He   \n",
+       "57                           Steven Price                     not known.   \n",
+       "58                             Manchester                           Wyth   \n",
+       "59                            Los Angeles                London, England   \n",
+       "\n",
+       "                       answer2                     answer3  \n",
+       "40                     Hershey               United States  \n",
+       "41     Grammy Award for Best R      MTV Video Music Award.  \n",
+       "42               United States                     Haiti\\n  \n",
+       "43                    Male\\n\\n                      Male\\n  \n",
+       "44               Ukrainian\\n\\n                 Ukrainian\\n  \n",
+       "45                       Elend                       Elend  \n",
+       "46                      Male\\n                      Male\\n  \n",
+       "47               Ballon d'Or\\n               Ballon d'Or\\n  \n",
+       "48            Mumbai Indians\\n            Mumbai Indians\\n  \n",
+       "49   United States of America.   United States of America.  \n",
+       "50   United States of America.   United States of America.  \n",
+       "51                     Wanda K                     Wanda K  \n",
+       "52            FEDERAL REPUBLIC    Colorado\\nQuestion:Which  \n",
+       "53                Alphabet\\n\\n                  Alphabet\\n  \n",
+       "54             Emmett Till did          None\\nExplanation:  \n",
+       "55      Academy Award for Best           MTV Movie Award\\n  \n",
+       "56                  Ferrari F1                    Lotus F1  \n",
+       "57          Unknown composer\\n           Unknown\\nQuestion  \n",
+       "58                        Wyth                        Wyth  \n",
+       "59                Los Angeles,                Los Angeles,  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "answer_pd = pd.DataFrame(answer_compare_dict)\n",
-    "answer_pd[:20]\n",
+    "# answer_pd[:20]\n",
     "# answer_pd[20:40]\n",
-    "# answer_pd[40:60]"
+    "answer_pd[40:60]"
    ]
   },
   {
