--- a/kbn_edit/lora_edit.ipynb
+++ b/kbn_edit/lora_edit.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "data_dir = '../dataset/ccks2024_know_edit/ZsRE-test-all.json'\n",
     "train_data_path = None\n",
-    "ds_size, data_type, = 10, 'zsre'\n",
+    "ds_size, data_type, = 326, 'zsre'\n",
     "hparams_dir = '../hparams/LoRA/Meta-Llama-3-8B-Instruct.yaml'\n",
     "metrics_save_dir = './EasyEditCache/metrics'"
    ]
@@ -205,6 +205,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('./0-326-Meta-Llama-3-8B-Instruct-zsre-knb_orgin_dict.json', 'r') as f:\n",
+    "    knb_dict = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 单条数据编辑\n",
     "metrics, edited_model, _ = editor.edit(\n",
     "    prompts=prompts,\n",
@@ -217,9 +227,7 @@
     "    pre_file=pre_file,\n",
     "    pre_edit = pre_edit,\n",
     "    test_generation=True,\n",
-    "    kbn_dict = {\n",
-    "        0: [0,1,2,3]\n",
-    "    }\n",
+    "    knb_dict = knb_dict,\n",
     ")"
    ]
   },
