--- a/knb_edit/test.ipynb
+++ b/knb_edit/test.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "target_name = \"model.layers.0.mlp.up_proj\"\n",
+    "match = re.match(r\".*\\.[^.]*\\.(\\d+)\\.\", target_name)\n",
+    "match.group(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match.group(0),match.group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! pip list|grep peft"
    ]
   },
@@ -46,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
