--- a/dataset/KnowEdit-ms/因果追踪和LoRA.ipynb
+++ b/dataset/KnowEdit-ms/因果追踪和LoRA.ipynb
@@ -3,18 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "LoRA\n",
     "dataset ZsRE-test-all\n",
@@ -612,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
