--- a/hparams/LoRA/test.ipynb
+++ b/hparams/LoRA/test.ipynb
@@ -2,36 +2,158 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install transformers_stream_generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The model is automatically converting to bf16 for faster inference. If you want to disable the automatic precision, please manually add bf16/fp16/fp32=True to \"AutoModelForCausalLM.from_pretrained\".\n",
+      "Try importing flash-attention for faster inference...\n",
+      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n"
+     ]
+    },
+    {
      "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006779193878173828,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Loading checkpoint shards",
+       "rate": null,
+       "total": 2,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f00407806b74cc4b42adbc6d1a79b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'alg_name': 'LoRA',\n",
-       " 'model_name': 'gpt-j-6b',\n",
-       " 'device': 0,\n",
-       " 'lora_type': 'adalora',\n",
-       " 'layers': [],\n",
-       " 'num_steps': 50,\n",
-       " 'batch_size': 1,\n",
-       " 'max_length': 30,\n",
-       " 'lr': '5e-3',\n",
-       " 'weight_decay': 0,\n",
-       " 'kl_factor': 0,\n",
-       " 'rank': 8,\n",
-       " 'lora_alpha': 32,\n",
-       " 'lora_dropout': 0.1,\n",
-       " 'norm_constraint': False,\n",
-       " 'target_modules': ['fc_in', 'fc_out'],\n",
-       " 'model_parallel': False}"
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 7,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "QWenLMHeadModel(\n",
+       "  (transformer): QWenModel(\n",
+       "    (wte): Embedding(151936, 2048)\n",
+       "    (drop): Dropout(p=0.0, inplace=False)\n",
+       "    (rotary_emb): RotaryEmbedding()\n",
+       "    (h): ModuleList(\n",
+       "      (0-23): 24 x QWenBlock(\n",
+       "        (ln_1): RMSNorm()\n",
+       "        (attn): QWenAttention(\n",
+       "          (c_attn): Linear(in_features=2048, out_features=6144, bias=True)\n",
+       "          (c_proj): Linear(in_features=2048, out_features=2048, bias=False)\n",
+       "          (core_attention_flash): FlashSelfAttention()\n",
+       "          (attn_dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): RMSNorm()\n",
+       "        (mlp): QWenMLP(\n",
+       "          (w1): Linear(in_features=2048, out_features=5504, bias=False)\n",
+       "          (w2): Linear(in_features=2048, out_features=5504, bias=False)\n",
+       "          (c_proj): Linear(in_features=5504, out_features=2048, bias=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): RMSNorm()\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=2048, out_features=151936, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
+    "\n",
+    "model_name = 'Qwen-1_8B-Chat'\n",
+    "model_path = '/share/huggingface/'\n",
+    "device = 'auto'\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path + model_name, trust_remote_code=True, device_map=device)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_path + model_name, trust_remote_code=True, device_map=device)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transformer.h.0.ln_1.weight torch.Size([2048]) torch.bfloat16\n",
+      "transformer.h.0.attn.c_attn.weight torch.Size([6144, 2048]) torch.bfloat16\n",
+      "transformer.h.0.attn.c_attn.bias torch.Size([6144]) torch.bfloat16\n",
+      "transformer.h.0.attn.c_proj.weight torch.Size([2048, 2048]) torch.bfloat16\n",
+      "transformer.h.0.ln_2.weight torch.Size([2048]) torch.bfloat16\n",
+      "transformer.h.0.mlp.w1.weight torch.Size([5504, 2048]) torch.bfloat16\n",
+      "transformer.h.0.mlp.w2.weight torch.Size([5504, 2048]) torch.bfloat16\n",
+      "transformer.h.0.mlp.c_proj.weight torch.Size([2048, 5504]) torch.bfloat16\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in model.named_parameters():\n",
+    "    if 'h.0' in k:\n",
+    "        print(k, v.shape, v.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 读取yaml文件\n",
     "import yaml\n",
@@ -44,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,31 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['q_proj', 'k_proj', 'v_proj', 'out_proj']\n",
-      "[0, 1, 2, 3, 4, 5, 6]\n",
-      "[7, 8, 9, 10, 11, 12, 13]\n",
-      "[14, 15, 16, 17, 18, 19, 20]\n",
-      "[21, 22, 23, 24, 25, 26, 27]\n",
-      "['fc_in', 'fc_out']\n",
-      "[0, 1, 2, 3, 4, 5, 6]\n",
-      "[7, 8, 9, 10, 11, 12, 13]\n",
-      "[14, 15, 16, 17, 18, 19, 20]\n",
-      "[21, 22, 23, 24, 25, 26, 27]\n",
-      "['q_proj', 'k_proj', 'v_proj', 'out_proj', 'fc_in', 'fc_out']\n",
-      "[0, 1, 2, 3, 4, 5, 6]\n",
-      "[7, 8, 9, 10, 11, 12, 13]\n",
-      "[14, 15, 16, 17, 18, 19, 20]\n",
-      "[21, 22, 23, 24, 25, 26, 27]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# target_modules\n",
     "target_modules_dict ={\n",
@@ -103,41 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'alg_name': 'LoRA',\n",
-       " 'batch_size': 1,\n",
-       " 'device': 0,\n",
-       " 'kl_factor': 0,\n",
-       " 'layers': [0, 1, 2, 3, 4, 5, 6],\n",
-       " 'lora_alpha': 32,\n",
-       " 'lora_dropout': 0.1,\n",
-       " 'lora_type': 'adalora',\n",
-       " 'lr': '5e-3',\n",
-       " 'max_length': 30,\n",
-       " 'model_name': 'gpt-j-6b',\n",
-       " 'model_parallel': False,\n",
-       " 'norm_constraint': False,\n",
-       " 'num_steps': 50,\n",
-       " 'rank': 8,\n",
-       " 'target_modules': ['q_proj',\n",
-       "  'k_proj',\n",
-       "  'v_proj',\n",
-       "  'out_proj',\n",
-       "  'fc_in',\n",
-       "  'fc_out'],\n",
-       " 'weight_decay': 0}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('./test/gpt-j-6b-all-0-6.yaml', 'r') as f:\n",
     "    hparams = yaml.load(f, Loader=yaml.FullLoader)\n",
@@ -161,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
