--- a/evaluate/evaluate.ipynb
+++ b/evaluate/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +191,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p99.05_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json', 'type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p99.95_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json', 'type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-max-bs20_120_p95.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json', 'type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-max-bs20_120_p90.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json', 'type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p95.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json', 'type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p90.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lyc/miniconda3/envs/ke2torch23cu121/lib/python3.9/site-packages/nltk/translate/bleu_score.py:515: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/home/lyc/miniconda3/envs/ke2torch23cu121/lib/python3.9/site-packages/nltk/translate/bleu_score.py:515: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/home/lyc/miniconda3/envs/ke2torch23cu121/lib/python3.9/site-packages/nltk/translate/bleu_score.py:515: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p99.05_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.19888794244459945, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.6562885046005249, 'final_score': 32.814425230026245}, 'portability': {'BLEU SCORE': 0.027854831558574544, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.511116087436676, 'final_score': 25.5558043718338}, 'locality': {'final_score': 0}, 'fluency': 39.349758044645455}\n",
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p99.95_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.034384220649134795, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.5138594508171082, 'final_score': 25.692972540855408}, 'portability': {'BLEU SCORE': 0.02485757812355424, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.48513516783714294, 'final_score': 24.256758391857147}, 'locality': {'final_score': 0}, 'fluency': 40.44854052893154}\n",
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-max-bs20_120_p95.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.21749242558695955, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.6990512609481812, 'final_score': 34.95256304740906}, 'portability': {'BLEU SCORE': 0.022057523217319467, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.4977273643016815, 'final_score': 24.886368215084076}, 'locality': {'final_score': 0}, 'fluency': 36.48383479924455}\n",
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-max-bs20_120_p90.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.21861554112806175, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.705782413482666, 'final_score': 35.2891206741333}, 'portability': {'BLEU SCORE': 0.02522607381917736, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.5099939107894897, 'final_score': 25.499695539474487}, 'locality': {'final_score': 0}, 'fluency': 34.070501211936275}\n",
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p95.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.23370261602378833, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.7166998386383057, 'final_score': 35.83499193191528}, 'portability': {'BLEU SCORE': 0.028172317459569614, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.5129472017288208, 'final_score': 25.64736008644104}, 'locality': {'final_score': 0}, 'fluency': 36.58383855675858}\n",
+      "type2_80-Qwen-1_8B-Chat-CKnowEdit-0-24-mlp.c_proj-knb_dict-mean-bs20_120_p90.0_rsTrue_a1_pd0_bias_knb_only_t_loss0.001.json\n",
+      "{'Edit_acc': {'BLEU SCORE': 0.21240747146165911, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.6937383413314819, 'final_score': 34.6869170665741}, 'portability': {'BLEU SCORE': 0.019660634191408958, 'ROUGE-1': 0.0, 'ROUGE-2': 0.0, 'ROUGE-L': 0.0, 'Bert Score': 0.5035473108291626, 'final_score': 25.17736554145813}, 'locality': {'final_score': 0}, 'fluency': 34.7043882292736}\n"
+     ]
+    }
+   ],
+   "source": [
+    "root_dir = '../ccks2024_output/type2_80/result'\n",
+    "\n",
+    "import os\n",
+    "file_names = os.listdir(root_dir)\n",
+    "print(file_names)\n",
+    "\n",
+    "for file in file_names:\n",
+    "    submit_path = os.path.join(root_dir, file)\n",
+    "    out_path = os.path.join('./metrics_results', file)\n",
+    "    check_format(submit_path)\n",
+    "    score = eval_score(submit_path)\n",
+    "    report_score(score, out_path)\n",
+    "    print(file)\n",
+    "    print(score)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
