--- a/dataset/ccks2024_know_edit/CKnowEditType/CKnowEdit.ipynb
+++ b/dataset/ccks2024_know_edit/CKnowEditType/CKnowEdit.ipynb
@@ -9,50 +9,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
+    "from transformers import AutoTokenizer\n",
+    "import numpy as np\n",
     "\n",
-    "\n",
-    "path = './type1_113.json'\n",
-    "with open(path, 'r', encoding='utf-8') as f:\n",
-    "    datas = json.load(f)"
+    "model_name_path = '/share/huggingface/Qwen-1_8B-Chat'\n",
+    "tok = AutoTokenizer.from_pretrained(model_name_path, eos_token='<|endoftext|>', pad_token='<|endoftext|>',unk_token='<|endoftext|>', trust_remote_code=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'input_ids': [108386, 3837, 99489, 6313], 'token_type_ids': [0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1]},\n",
+       " {'input_ids': tensor([[108386,   3837,  99489,   6313]]), 'token_type_ids': tensor([[0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1]])})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prompt_list = [data['prompt'] for data in datas]\n",
-    "target_new_list = [data['target_new'] for data in datas]"
+    "tok(\"你好，世界！\"), tok(\"你好，世界！\", return_tensors=\"pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([108386, 3837, 99489, 6313], tensor([[108386,   3837,  99489,   6313]]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tok.encode(\"你好，世界！\"), tok.encode(\"你好，世界！\", return_tensors=\"pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token ID: 0, Token: b'!'\n",
-      "Token ID: 1, Token: b'\"'\n",
-      "Token ID: 2, Token: b'#'\n",
-      "Token ID: 3, Token: b'$'\n",
-      "Token ID: 4, Token: b'%'\n",
-      "Token ID: 5, Token: b'&'\n",
-      "Token ID: 6, Token: b\"'\"\n",
-      "Token ID: 7, Token: b'('\n",
-      "Token ID: 8, Token: b')'\n",
-      "Token ID: 9, Token: b'*'\n"
+      "type1_133.json\n",
+      "prompt token length: 22.31\n",
+      "target token length: 12.38\n",
+      "type2_80.json\n",
+      "prompt token length: 15.16\n",
+      "target token length: 16.85\n",
+      "type3_40.json\n",
+      "prompt token length: 8.8\n",
+      "target token length: 39.0\n",
+      "type4_50.json\n",
+      "prompt token length: 9.86\n",
+      "target token length: 8.68\n",
+      "type5_70.json\n",
+      "prompt token length: 24.56\n",
+      "target token length: 2.7\n",
+      "type6_50.json\n",
+      "prompt token length: 8.28\n",
+      "target token length: 8.66\n",
+      "type7_277.json\n",
+      "prompt token length: 18.22\n",
+      "target token length: 195.69\n"
      ]
     }
    ],
+   "source": [
+    "root_dir = './'            \n",
+    "file_name_list = os.listdir(root_dir)\n",
+    "file_name_list.sort()\n",
+    "\n",
+    "for file_name in file_name_list:\n",
+    "    if not file_name.endswith('.json'):\n",
+    "        continue\n",
+    "    print(file_name)\n",
+    "    path = os.path.join(root_dir, file_name)\n",
+    "    with open(path, 'r', encoding='utf-8') as f:\n",
+    "        data_list = json.load(f)\n",
+    "\n",
+    "    prompt_token_len_list,target_token_len_list = [],[]\n",
+    "    for data in data_list:\n",
+    "        prompt_token_len_list.append(tok(data['prompt'], return_tensors='pt')['input_ids'].shape[1])\n",
+    "        target_token_len_list.append(tok(data['target_new'], return_tensors='pt')['input_ids'].shape[1])\n",
+    "    # 保留两位小数,四舍五入\n",
+    "    print('prompt token length:',round(np.mean(prompt_token_len_list),2))\n",
+    "    print('target token length:',round(np.mean(target_token_len_list),2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
     "\n",
@@ -69,67 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "151643"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(tokenizer.get_vocab())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'\\xe2\\xbd\\x97'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(tokenizer.get_vocab().keys())[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<|endoftext|>'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer.convert_ids_to_tokens(151643)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,40 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([133, 41])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt_tokens.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22.30827067669173"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tokenize_prompt_list(prompt_list):\n",
     "    token_list, token_length_list = [], []\n",
