--- a/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
+++ b/dataset/KnowEdit-ms/llm_gen_dataset.ipynb
@@ -513,21 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from zhipuai import ZhipuAI\n",
-    "client = ZhipuAI(api_key=\"1239bfa4ba1cc7135d4476e3ad30af96.JjzOdCR7qNwFSZk7\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "client = ZhipuAI(api_key=\"1239bfa4ba1cc7135d4476e3ad30af96.JjzOdCR7qNwFSZk7\")\n",
     "data_path = './benchmark_ZsRE_ZsRE-test-all.json'\n",
     "with open(data_path, 'r') as f:\n",
     "    data_list = json.load(f)\n",
