upodate test/test1.ipynb

--- a/tutorial-notebooks/test.ipynb
+++ b/tutorial-notebooks/test.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['mlp.w1', 'mlp.w2'], ['mlp.w1'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'mlp.w1,mlp.w2'.split(','),'mlp.w1'.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -345,17 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
     "\n",
     "model_name = 'Qwen-1_8B-Chat'\n",
     "model_path = '/share/huggingface/'\n",
-    "device = 'auto'\n",
+    "device = 'cpu'\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_path + model_name, trust_remote_code=True, device_map=device)\n"
    ]
   },
@@ -381,9 +401,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The model is automatically converting to bf16 for faster inference. If you want to disable the automatic precision, please manually add bf16/fp16/fp32=True to \"AutoModelForCausalLM.from_pretrained\".\n",
+      "Try importing flash-attention for faster inference...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006924867630004883,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Loading checkpoint shards",
+       "rate": null,
+       "total": 2,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "265102c53756437e9ac28afb1dea08a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "QWenLMHeadModel(\n",
+       "  (transformer): QWenModel(\n",
+       "    (wte): Embedding(151936, 2048)\n",
+       "    (drop): Dropout(p=0.0, inplace=False)\n",
+       "    (rotary_emb): RotaryEmbedding()\n",
+       "    (h): ModuleList(\n",
+       "      (0-23): 24 x QWenBlock(\n",
+       "        (ln_1): RMSNorm()\n",
+       "        (attn): QWenAttention(\n",
+       "          (c_attn): Linear(in_features=2048, out_features=6144, bias=True)\n",
+       "          (c_proj): Linear(in_features=2048, out_features=2048, bias=False)\n",
+       "          (core_attention_flash): FlashSelfAttention()\n",
+       "          (attn_dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): RMSNorm()\n",
+       "        (mlp): QWenMLP(\n",
+       "          (w1): Linear(in_features=2048, out_features=5504, bias=False)\n",
+       "          (w2): Linear(in_features=2048, out_features=5504, bias=False)\n",
+       "          (c_proj): Linear(in_features=5504, out_features=2048, bias=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): RMSNorm()\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=2048, out_features=151936, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = AutoModelForCausalLM.from_pretrained(model_path + model_name, trust_remote_code=True, device_map=device)\n",
     "model"
